--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: alfredfd
+          password: dckr_pat_HrPUl8Yx1XZyt-j5KAoxhxkuuPg
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
