update production database name to defaultdb

--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,7 @@ test:
 production:
   primary:
     <<: *default
-    database: rails_production
+    database: defaultdb
   cache:
     <<: *default
     database: rails_production_cache
