--- a/config/database.yml
+++ b/config/database.yml
@@ -33,15 +33,15 @@ production:
   primary:
     <<: *default
     database: defaultdb
-  cache:
-    <<: *default
-    database: rails_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *default
-    database: rails_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *default
-    database: rails_production_cable
-    migrations_paths: db/cable_migrate
+  # cache:
+  #   <<: *default
+  #   database: rails_production_cache
+  #   migrations_paths: db/cache_migrate
+  # queue:
+  #   <<: *default
+  #   database: rails_production_queue
+  #   migrations_paths: db/queue_migrate
+  # cable:
+  #   <<: *default
+  #   database: rails_production_cable
+  #   migrations_paths: db/cable_migrate
