Update production database configuration to use environment variable for database name

--- a/config/database.yml
+++ b/config/database.yml
@@ -32,16 +32,4 @@ test:
 production:
   primary:
     <<: *default
-    database: defaultdb
-  # cache:
-  #   <<: *default
-  #   database: rails_production_cache
-  #   migrations_paths: db/cache_migrate
-  # queue:
-  #   <<: *default
-  #   database: rails_production_queue
-  #   migrations_paths: db/queue_migrate
-  # cable:
-  #   <<: *default
-  #   database: rails_production_cable
-  #   migrations_paths: db/cable_migrate
+    database: <%= ENV.fetch("DB_NAME", "defaultdb") %>
